--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "intervention/image": "^2.5"
     },
     "require-dev": {
-        "illuminate/support": "^8.0"
+        "illuminate/support": "^8.0",
+        "illuminate/http": "^8.0",
+        "illuminate/container": "^8.0"
     },
     "minimum-stability": "dev"
 }
